Fixed: Layout issues

--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -53,11 +53,23 @@ html {
 
 img {
   width: 100%;
+  border-radius: 8px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
+  .filter {
+    margin: 0;
+    font-size: 17px;
+  }
+}
+
+@media screen and (max-width: 480px) {
   .item {
     width: calc(100% - 20px);
+  }
+  .filter {
+    margin: 0;
+    font-size: 14px;
   }
 }
 
@@ -69,7 +81,6 @@ img {
 
 .project {
   overflow: hidden;
-  border-radius: 8px;
   //   &::before {
   //     content: "";
   //   }
